--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section id="intro">
             <div class="intro-stuff">
                 <div class="face-image-container">
-                    <img src="Geral/FotoFelipe.jpg" />
+                    <img src="Geral/FotoFelipe.png" />
                 </div>
                 <div class="information">
                     <h1>About Me</h1>
