Added Render Section

--- a/index.html
+++ b/index.html
@@ -181,7 +181,19 @@
                 </div>
             </div>
         </section>
+        <section class="section-pattern" id="renders">
+            <h2>Showcase of 3D Renders</h2>
 
+            <div class="videos-box">
+                <div class="video-render-item">
+                    <video muted controls><source src="JOBS/video 02.mp4" type="video/mp4" /></video>
+                </div>
+                <div class="video-render-item">
+                    <video muted controls><source src="JOBS/video 01.mp4" type="video/mp4" /></video>
+                </div>
+            </div>
+
+        </section>
         <section class="section-pattern" id="jogos">
             <h2>Showcase of small Games</h2>
 
