Revert "Art Station - Added"
This reverts commit 6c9fa60edb93b185cd512c9d6e9650a5788b0263.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             <a href="https://www.linkedin.com/in/felipe-marzanasco/"><img src="Geral/LinkedinIcon.png" alt="Linkedin" style="width:30px;height:30px;" /></a>
             <a href="https://github.com/FelipeBSM"><img src="Geral/GitIcon.png" alt="Github" style="width:30px;height:30px;" /></a>
             <a href="https://bugnature.itch.io/"><img src="Geral/ItchioIcon.png" alt="Itch.io" style="width:30px;height:30px;" /></a>
-            <a href="https://www.artstation.com/felipebucha"><img src="Geral/ArtStationIcon2.png" alt="ArtStation.io" style="width:30px;height:30px;" /></a>
         </div>
     </header>
     <main>
@@ -103,94 +102,83 @@
             <h2>A Selection of 3D Models</h2>
 
             <div class="carousel">
-                <a href="https://www.artstation.com/felipebucha" target="_blank">
-                    <div class="carousel-inner">
-                        <div class="carousel-item">
-                            <img src="ImagensModelos/img01.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="ImagensModelos/img02.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="ImagensModelos/img03.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="ImagensModelos/img04.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="verticalImage" src="ImagensModelos/img05.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="ImagensModelos/img06.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="ImagensModelos/img11.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="ImagensModelos/img08.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="ImagensModelos/img09.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="verticalImage" src="ImagensModelos/img12.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="ImagensModelos/img13.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="verticalImage" src="ImagensModelos/img14.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="ImagensModelos/img17.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="verticalImage" src="ImagensModelos/img18.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="ImagensModelos/img16.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="ImagensModelos/img19.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="ImagensModelos/img20.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="verticalImage" src="ImagensModelos/img21.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="ImagensModelos/img22.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="ImagensModelos/img23.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="verticalImage" src="ImagensModelos/img24.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="verticalImage" src="ImagensModelos/img25.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="ImagensModelos/img26.png" alt="Modelo 3D 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="ImagensModelos/img27.png" alt="Modelo 3D 1">
-                        </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item">
+                        <img src="ImagensModelos/img01.png" alt="Modelo 3D 1">
                     </div>
-
-                    <div class="carousel-overlay">
-
-                        <div class="logo-container">
-                            <img src="Geral/ArtStationIcon2.png" alt="ArtStation.io" class="artstation-icon">
-                        </div>
-
+                    <div class="carousel-item">
+                        <img src="ImagensModelos/img02.png" alt="Modelo 3D 1">
                     </div>
-
-                </a>
-                    <div class="carousel-indicators">
-                        <!-- Indicators will be dynamically generated here -->
+                    <div class="carousel-item">
+                        <img src="ImagensModelos/img03.png" alt="Modelo 3D 1">
                     </div>
+                    <div class="carousel-item">
+                        <img src="ImagensModelos/img04.png" alt="Modelo 3D 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="verticalImage" src="ImagensModelos/img05.png" alt="Modelo 3D 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="ImagensModelos/img06.png" alt="Modelo 3D 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="ImagensModelos/img11.png" alt="Modelo 3D 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="ImagensModelos/img08.png" alt="Modelo 3D 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="ImagensModelos/img09.png" alt="Modelo 3D 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="verticalImage" src="ImagensModelos/img12.png" alt="Modelo 3D 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="ImagensModelos/img13.png" alt="Modelo 3D 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="verticalImage" src="ImagensModelos/img14.png" alt="Modelo 3D 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="ImagensModelos/img17.png" alt="Modelo 3D 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="verticalImage" src="ImagensModelos/img18.png" alt="Modelo 3D 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="ImagensModelos/img16.png" alt="Modelo 3D 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="ImagensModelos/img19.png" alt="Modelo 3D 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="ImagensModelos/img20.png" alt="Modelo 3D 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="verticalImage" src="ImagensModelos/img21.png" alt="Modelo 3D 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="ImagensModelos/img22.png" alt="Modelo 3D 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="ImagensModelos/img23.png" alt="Modelo 3D 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="verticalImage" src="ImagensModelos/img24.png" alt="Modelo 3D 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="verticalImage" src="ImagensModelos/img25.png" alt="Modelo 3D 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="ImagensModelos/img26.png" alt="Modelo 3D 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="ImagensModelos/img27.png" alt="Modelo 3D 1">
+                    </div>
+                </div>
+                <div class="carousel-indicators">
+                    <!-- Indicators will be dynamically generated here -->
+                </div>
             </div>
         </section>
         <section class="section-pattern" id="renders">
@@ -221,20 +209,13 @@
                 </div>
             </div>
         </section>
-        <section class="section-pattern" id="links">
-            <h2>Other Links</h2>
-
-            <div class="social-media-bottom">
-                <a href="https://www.linkedin.com/in/felipe-marzanasco/"><img src="Geral/LinkedinIcon.png" alt="Linkedin" /></a>
-                <a href="https://github.com/FelipeBSM"><img src="Geral/GitIcon.png" alt="Github" /></a>
-                <a href="https://bugnature.itch.io/"><img src="Geral/ItchioIcon.png" alt="Itch.io" /></a>
-                <a href="https://www.artstation.com/felipebucha"><img src="Geral/ArtStationIcon2.png" alt="ArtStation.io" /></a>
-            </div>
-
-        </section>
 
     </main>
     <footer id="contact" class="footerClass">
+        <p>Itch.io - <a href="https://bugnature.itch.io" style="color:white; text-decoration:none;">https://bugnature.itch.io</a></p>
+        <p>Github - <a href="https://github.com/FelipeBSM" style="color:white; text-decoration:none;">https://github.com/FelipeBSM</a></p>
+        <p>Linkedin - <a href="https://www.linkedin.com/in/felipe-marzanasco/" style="color:white; text-decoration:none;">https://www.linkedin.com/in/felipe-marzanasco/</a></p>
+        <br />
         <p>© 2024 Felipe Marzanasco. Todos os direitos reservados.</p>
     </footer>
 
