--- a/index.html
+++ b/index.html
@@ -211,12 +211,18 @@
             </div>
         </section>
 
+        <section class="section-pattern" id="links">
+            <h2>Other Links</h2>
+
+            <div class="social-media-bottom">
+                <a href="https://www.linkedin.com/in/felipe-marzanasco/"><img src="Geral/LinkedinIcon.png" alt="Linkedin" /></a>
+                <a href="https://github.com/FelipeBSM"><img src="Geral/GitIcon.png" alt="Github" /></a>
+                <a href="https://bugnature.itch.io/"><img src="Geral/ItchioIcon.png" alt="Itch.io" /></a>
+                <a href="https://www.artstation.com/felipebucha"><img src="Geral/ArtStationIcon2.png" alt="ArtStation.io" /></a>
+            </div>
+        </section>
     </main>
     <footer id="contact" class="footerClass">
-        <p>Itch.io - <a href="https://bugnature.itch.io" style="color:white; text-decoration:none;">https://bugnature.itch.io</a></p>
-        <p>Github - <a href="https://github.com/FelipeBSM" style="color:white; text-decoration:none;">https://github.com/FelipeBSM</a></p>
-        <p>Linkedin - <a href="https://www.linkedin.com/in/felipe-marzanasco/" style="color:white; text-decoration:none;">https://www.linkedin.com/in/felipe-marzanasco/</a></p>
-        <br />
         <p>© 2024 Felipe Marzanasco. Todos os direitos reservados.</p>
     </footer>
 
