--- a/index.html
+++ b/index.html
@@ -214,7 +214,12 @@
         <section class="section-pattern" id="links">
             <h2>Other Links</h2>
 
-           
+            <div class="social-media-bottom">
+                <a href="https://www.linkedin.com/in/felipe-marzanasco/"><img src="Geral/LinkedinIcon.png" alt="Linkedin" /></a>
+                <a href="https://github.com/FelipeBSM"><img src="Geral/GitIcon.png" alt="Github" /></a>
+                <a href="https://bugnature.itch.io/"><img src="Geral/ItchioIcon.png" alt="Itch.io" /></a>
+                <a href="https://www.artstation.com/felipebucha"><img src="Geral/ArtStationIcon2.png" alt="ArtStation.io" /></a>
+            </div>
         </section>
     </main>
     <footer id="contact" class="footerClass">
