carousel - overlay - added

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio de Felipe Marzanasco</title>
+    <title>Felipe Marzanasco | Web Portfolio </title>
     <link rel="stylesheet" href="PortStyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="Geral/BuchaWEB.WEBP">
+    
 </head>
 <body>
     <header>
@@ -103,83 +103,92 @@
             <h2>A Selection of 3D Models</h2>
 
             <div class="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item">
-                        <img src="ImagensModelos/img01.png" alt="Modelo 3D 1">
+                <a href="https://www.artstation.com/felipebucha" target="_blank">
+                    <div class="carousel-inner">
+                        <div class="carousel-item">
+                            <img src="ImagensModelos/img01.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="ImagensModelos/img02.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="ImagensModelos/img03.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="ImagensModelos/img04.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="verticalImage" src="ImagensModelos/img05.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="ImagensModelos/img06.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="ImagensModelos/img11.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="ImagensModelos/img08.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="ImagensModelos/img09.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="verticalImage" src="ImagensModelos/img12.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="ImagensModelos/img13.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="verticalImage" src="ImagensModelos/img14.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="ImagensModelos/img17.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="verticalImage" src="ImagensModelos/img18.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="ImagensModelos/img16.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="ImagensModelos/img19.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="ImagensModelos/img20.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="verticalImage" src="ImagensModelos/img21.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="ImagensModelos/img22.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="ImagensModelos/img23.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="verticalImage" src="ImagensModelos/img24.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="verticalImage" src="ImagensModelos/img25.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="ImagensModelos/img26.png" alt="Modelo 3D 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="ImagensModelos/img27.png" alt="Modelo 3D 1">
+                        </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="ImagensModelos/img02.png" alt="Modelo 3D 1">
+                    <div class="carousel-overlay">
+
+                        <div class="logo-container">
+                            <img src="Geral/ArtStationIcon2.png" alt="ArtStation.io" class="artstation-icon">
+                        </div>
+
                     </div>
-                    <div class="carousel-item">
-                        <img src="ImagensModelos/img03.png" alt="Modelo 3D 1">
+                </a>
+                    <div class="carousel-indicators">
+                        <!-- Indicators will be dynamically generated here -->
                     </div>
-                    <div class="carousel-item">
-                        <img src="ImagensModelos/img04.png" alt="Modelo 3D 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="verticalImage" src="ImagensModelos/img05.png" alt="Modelo 3D 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="ImagensModelos/img06.png" alt="Modelo 3D 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="ImagensModelos/img11.png" alt="Modelo 3D 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="ImagensModelos/img08.png" alt="Modelo 3D 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="ImagensModelos/img09.png" alt="Modelo 3D 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="verticalImage" src="ImagensModelos/img12.png" alt="Modelo 3D 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="ImagensModelos/img13.png" alt="Modelo 3D 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="verticalImage" src="ImagensModelos/img14.png" alt="Modelo 3D 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="ImagensModelos/img17.png" alt="Modelo 3D 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="verticalImage" src="ImagensModelos/img18.png" alt="Modelo 3D 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="ImagensModelos/img16.png" alt="Modelo 3D 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="ImagensModelos/img19.png" alt="Modelo 3D 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="ImagensModelos/img20.png" alt="Modelo 3D 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="verticalImage" src="ImagensModelos/img21.png" alt="Modelo 3D 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="ImagensModelos/img22.png" alt="Modelo 3D 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="ImagensModelos/img23.png" alt="Modelo 3D 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="verticalImage" src="ImagensModelos/img24.png" alt="Modelo 3D 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="verticalImage" src="ImagensModelos/img25.png" alt="Modelo 3D 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="ImagensModelos/img26.png" alt="Modelo 3D 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="ImagensModelos/img27.png" alt="Modelo 3D 1">
-                    </div>
-                </div>
-                <div class="carousel-indicators">
-                    <!-- Indicators will be dynamically generated here -->
-                </div>
             </div>
         </section>
         <section class="section-pattern" id="renders">
